fixed about section causing white space

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -4,6 +4,7 @@
     width: 100%;
     background-color: $primary;
     color: $primary-dark;
+    overflow-x: hidden;
     .sheered{
         background-color: $primary-light;
         width: 100%;
