--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -2,10 +2,12 @@
 
 .navbar--container{
     width: 100%;
+    max-width: 100vw;
     height: 50px;
     position: fixed;
     display: flex;
     justify-content: flex-end;
+    // justify-content: center;
     align-items: center;
     //padding: 0% 5%;
     box-sizing: border-box;
